removes scrollbar bug on main nav

--- a/ui/main-sidebar/main-navigation.reel/main-navigation.css
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    overflow: auto;
 }
 
 .MainNavigation-repetition {
@@ -20,7 +19,6 @@
     outline: none;
     cursor: pointer;
     height: 2em;
-    /*color: #ddd;*/
 }
 
 .MainNavigation-preferences:hover {
